--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href="http://fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
 	<title>Document</title>
 </head>
 <body>
-	
+	<nav class="top-navigation">
+		<div class="content">
+			<img class="logo" src="image/karma-logo copy.svg" alt="Karma" width="35">
+				<ul class="links">
+					<li class="active">Meet Karma</li>
+					<li>How it works</li>
+					<li>Store</li>
+					<li>Blog</li>
+					<li>Help</li>
+					<li>Log In</li>
+				</ul>
+		</div>
+	</nav> 
+		
+
 </body>
 </html>
