--- a/index.html
+++ b/index.html
@@ -21,6 +21,37 @@
 				</ul>
 		</div>
 	</nav> 
+		<section class="introduction">
+			<div class="content">
+				<h1>Introducing Karma</h1>
+				<h3>Bring WiFi with you, everywhere you go.</h3>
+				<button>Learn More</button>
+			</div>
+		</section>
+		<section class="cases">
+			<div class="content">
+				<h2>Everyone needs a little Karma.</h2>
+				<ul>
+					<li>
+						<img src="image/icon-coffee copy.svg" width="127" height="127" alt="Internet">
+						<div class="caption">
+							<h3>Internet for all devices</h3>
+						</div>
+					</li>
+					<li>	
+						<img src="image/icon-devices copy.svg" width="127" height="127" alt="coffee">
+						<div class="caption">
+							<h3>Boost your productivity</h3>
+						</div>
+					</li>
+					<li>
+						<img src="image/icon-refill copy.svg" width="127" height="127" alt="gasoline">
+						<div class="caption">
+							<h3>Pay as you go</h3>
+					</li>
+				</ul>
+			</div>
+		</section>
 		
 
 </body>
