--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="http://fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="icon" type="image/png" href="favicon.ico" />
 	<title>Document</title>
 </head>
 <body>
 	<nav class="top-navigation">
 		<div class="content">
-			<img class="logo" src="image/karma-logo copy.svg" alt="Karma" width="35">
+			<img class="logo transition" src="image/karma-logo copy.svg" alt="Karma" width="35">
 				<ul class="links">
 					<li class="active">Meet Karma</li>
 					<li>How it works</li>
@@ -33,18 +35,16 @@
 				<h2>Everyone needs a little Karma.</h2>
 				<ul>
 					<li>
-						<img src="image/icon-coffee copy.svg" width="127" height="127" alt="Internet">
+						<img src="image/icon-devices copy.svg" width="127" height="127" alt="coffee">
 						<div class="caption">
 							<h3>Internet for all devices</h3>
 						</div>
-					</li>
-					<li>	
-						<img src="image/icon-devices copy.svg" width="127" height="127" alt="coffee">
+					</li><li>	
+						<img src="image/icon-coffee copy.svg" width="127" height="127" alt="Internet">
 						<div class="caption">
 							<h3>Boost your productivity</h3>
 						</div>
-					</li>
-					<li>
+					</li><li>
 						<img src="image/icon-refill copy.svg" width="127" height="127" alt="gasoline">
 						<div class="caption">
 							<h3>Pay as you go</h3>
@@ -52,7 +52,26 @@
 				</ul>
 			</div>
 		</section>
-		
+		<footer>
+			<div class="content">
+				<hr />
+					<h5>Join us on</h5>
+						<ul class="icon">
+							<li class="twitter">
+								<i class="fa fa-twitter"></i>
+							</li>
+							<li class="facebook">
+								<i class="fa fa-facebook"></i>
+							</li>
+							<li class="instagram">
+								<i class="fa fa-instagram"></i>
+							</li>
+						</ul>
+				<span class="copy">
+					&copy Karma Mobility, Inc.
+				</span>
+			</div>
+		</footer>
 
 </body>
 </html>
