--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<nav class="top-navigation">
 		<div class="content">
-			<img class="logo transition" src="/../image/karma-logo copy.svg" alt="Karma" width="35">
+			<img class="logo transition" src="image/karma-logo copy.svg" alt="Karma" width="35">
 				<ul class="links">
 					<li class="active">Meet Karma</li>
 					<li>How it works</li>
@@ -32,20 +32,20 @@
 		</section>
 		<section class="cases">
 			<div class="content">
-				<h2>Everyone need	s a little Karma.</h2>
+				<h2>Everyone needs a little Karma.</h2>
 				<ul>
 					<li>
-						<img src="/../image/icon-devices copy.svg" width="127" height="127" alt="coffee">
+						<img src="image/icon-devices copy.svg" width="127" height="127" alt="coffee">
 						<div class="caption">
 							<h3>Internet for all devices</h3>
 						</div>
 					</li><li>	
-						<img src="/../image/icon-coffee copy.svg" width="127" height="127" alt="Internet">
+						<img src="image/icon-coffee copy.svg" width="127" height="127" alt="Internet">
 						<div class="caption">
 							<h3>Boost your productivity</h3>
 						</div>
 					</li><li>
-						<img src="/../image/icon-refill copy.svg" width="127" height="127" alt="gasoline">
+						<img src="image/icon-refill copy.svg" width="127" height="127" alt="gasoline">
 						<div class="caption">
 							<h3>Pay as you go</h3>
 					</li>
